--- a/SistemaDeVentas/package.json
+++ b/SistemaDeVentas/package.json
@@ -14,6 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "express-jwt-authz": "^2.4.1",
+    "express-oauth2-jwt-bearer": "^1.0.0",
+    "jwks-rsa": "^2.0.5",
+    "jwt": "^0.2.0",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^4.1.3",
     "nanoid": "^3.1.30",
     "nodemon": "^2.0.13",
